# entropy-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: api.html  examples.html  index.html
docs/assets/: search-index.json
docs/guide/: adapters.html  chaos.html  cli.html  concepts.html  datasets.html  installation.html  metrics.html  observability.html  plugins.html  quickstart.html  reports.html  simulation.html  tracing.html
entropy/: __init__.py
entropy/benchmarks/: __init__.py  bench.py
entropy/chaos/: __init__.py  faults.py  runner.py
entropy/cli/: __init__.py  main.py
entropy/core/: __init__.py  exporters.py  models.py  suite.py  tracing.py
entropy/dashboard/: __init__.py  app.py
entropy/datasets/: __init__.py  cases.py  loaders.py
entropy/integrations/: __init__.py  autogen.py  base.py  crewai.py  custom.py  google_adk.py  langchain.py  langgraph.py  mcp.py  openai.py  pydanticai.py  wire.py
entropy/metrics/: __init__.py  behavioral.py  drift.py  entropy_.py  execution.py  layers.py  memory.py  multiagent.py  reasoning.py  registry.py  safety.py  statistical.py  tool.py
entropy/observability/: __init__.py  watch.py
entropy/plugins/: __init__.py  manager.py
entropy/regression/: __init__.py  test.py
entropy/reports/: __init__.py  exporters.py
examples/: agent_demo.py  basic.py  dataset_demo.json  langchain_e2e.py  langchain_full_eval.py  langchain_ollama_e2e.py
tests/: test_basic.py  test_langchain_adapter.py  test_phase1.py  test_phase3.py  test_phase4.py  test_vision_metrics.py
(+6 files in other folders)
